2002-03-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (WISH_PROG): moved and updated env var definitions
	to have wish work from build dir.  Removed TCL_EXTRA_CFLAGS,
	TCL_LD_FLAGS, TCL_SHLIB_LD_LIBS, TCL_DBGX, TCL_STUB_LIB_FILE,
	TCL_STUB_LIB_SPEC as they aren't needed (configure acquires all
	that info for us).  TCL_LIBS is also not needed, but left in as a
	reference to the libs Tcl used.

	* configure: regen based on updated tclconfig/tcl.m4
	* configure.in: moved the SHLIB_LD_LIBS magic into
	tclconfig/tcl.m4 and noted where users can modify (SHLIB_LD_)LIBS.
	* tclconfig/tcl.m4: updated from sample to be more independent of
	*Config.sh.

	* unix/Makefile.in (removed):
	* unix/configure.in (removed):
	* unix/configure (removed):
	* unix/install-sh (removed): removed old makefile files to force
	use of new toplevel TEA 2002 configure/make.

2002-03-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tkTable.test: more icursor tests
	* generic/tkTable.c (TableWidgetObjCmd): corrected placing the
	icursor and retaining the position.

2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c:
	* generic/tkTable.h:
	* generic/tkTableCmds.c:
	* generic/tkTableUtil.c: cleaned up several areas where cache data
	was not getting freed. [Bug #532447] (bloisi)

2002-03-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tkTable.test: added tag configure tests

	* generic/tkTableTag.c (Table_TagCmd): work-around for bug in
	Tk_ConfigureValue that sets interp->result to NULL. [Bug #522882]

	* generic/tkTable.c (TableDisplay): when building with threads on
	WIN32, use NO_XSETCLIP instead of direct DC hacks because Tk
	doesn't use CS_CLASSDC on threaded builds.
	(Tktable_Init) Corrected to use BUILD_Tktable for EXTERN changes.

	* configure:
	* configure.in: use double-eval to substitute DBGX var for
	${PACKAGE}_LIB_FILE.

	* Makefile.in: cleaned up install target

2002-03-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* demos/loadtable.tcl: